# PL2

./: .gitignore  .gitmodules  INSTALL.md  LICENSE  PLpapers.md  PLresources.md  README.md  seminars.md
VM/: ASSIGNMENT10.md  Cargo.toml
VM/examples/: app.ml  fact.ml  fib.ml  foo.ml  list_gc2.ml  list_sum.ml  read_list.ml
VM/src/: bytecode.rs  heap.rs
homework10/: README.md
homework10/examples/: calls.ml  fold.ml  list_gc.ml
homework10/src/: bytecode.rs  main.rs  vm.rs
homework7/: LICENSE  README.md  miniML.cabal
homework7/CLI/: Main.hs
homework7/examples/: counter.ml  fact.ml  fib.ml  fibref.ml  hof.ml  map.ml  nonterm.ml  refs1.ml  refs2.ml  refs3.ml  refs4.ml  sum.ml
homework7/src/: MiniML.hs
homework7/src/MiniML/: Eval.hs  Lex.x  Parse.y  Print.hs  Syntax.hs  Typecheck.hs  Values.hs
homework7/test/: Gen.hs  Main.hs
homework8/: README.md  miniML.cabal
homework8/CLI/: Main.hs
homework8/examples/: fst.ml  fst_poly.ml  map.ml  map1.ml  mapTuple.ml
homework8/examples/pass/: bool.ml  fact.ml  fib.ml  fold.ml  fun.ml  head.ml  hof.ml  ite.ml  map.ml  mapTuple1.ml  mapTuple2.ml  poly.ml  sum.ml
homework8/src/: MiniML.hs
homework8/src/MiniML/: Error.hs  Lex.x  Parse.y  Print.hs  Syntax.hs  Typeinf.hs
homework8/test/: Gen.hs  Main.hs
lectures/: Makefile  PLpapers.md  _CoqProject  hoare.v  imp.v  intro.v  lambda.v  logic.v  proofs-as-programs.v  types.v
lectures/Coq/: hoare.v  intro.v  lambda.v  stack.v
lectures/Dafny/: examples.dfy  examples_sol.dfy  fib.dfy  fib_sol.dfy
lectures/FFI/add/: Add.hs  Makefile  cadd.c
lectures/FFI/add_ptrs/: Add.hs  cadd.c
lectures/FFI/timestamp/: Makefile  Time.hs
lectures/Haskell/: Haskell.cabal  Intro.hs  LICENSE  README.md
lectures/Haskell/src/: FFI.hi  FFI.hs  Intro.hs  Main.hs  QuickCheck.hs  SymbDiff.hs  Typeclasses.hs
lectures/Rocq/: 01-intro.v  Makefile  _CoqProject  _RocqProject  notes_01_intro.v  notes_02_imp.v  notes_02_logic.v  notes_03_imp.v  notes_04_compcorrect.v  notes_05_hoare.v  notes_06_lambda.v  notes_07_types.v  notes_08_structures.v
lectures/Rust/: README.md  book.toml
lectures/Rust/src/: SUMMARY.md  basics.md  generics.md  iterators.md  lifetimes.md  more.md  moretypes.md  overview.md  ownership.md  references.md  traits.md  typestate.md
lectures/SMT/: query1.smt2  query2.smt2
lectures/Unsafe/: README.md  iter.cpp  unsafe1.c  unsafe2.c  unsafe3.c  unsafe4.c
miniML/: ASSIGNMENT6.md  ASSIGNMENT8.md  ASSIGNMENT9.md  LICENSE  README.md  miniML.cabal
miniML/CLI/: Main.hs
miniML/examples/: app.ml  calls.ml  casel.ml  fib.ml  fold.ml  lazy.ml  lazy2.ml  ref.ml
miniML/examples-typeinf/fail/: nested-let1.ml  nested-let2.ml  nested-let3.ml  nested-let4.ml  nested-rec.ml
miniML/examples-typeinf/pass/: fold.ml  head.ml  map.ml  map1.ml
miniML/src/: MiniML.hs
miniML/src/MiniML/: ClosureConv.hs  Error.hs  Eval.hs  Infer.hs  Lazy.hs  Lex.x  Parse.y  (+3 more)
miniML/test/: Gen.hs  Main.hs
rust/: book.toml
rust/src/: SUMMARY.md  basics.md  generics.md  getting_started.md  moretypes.md  ownership.md  references.md  traits.md
