cabal-version:      2.4

name:               miniML
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             zoep
maintainer:         zoe.paraskevopoulou@gmail.com

common common
    ghc-options: -Wall
    default-language:   Haskell2010
    build-depends:
        base                   >= 4.19.0.0,
        containers             >= 0.5,
        array                  >= 0.5.3.0,
        prettyprinter          >= 1.7.1,
        text                   >= 2.1.2,
        QuickCheck             >= 2.13.2,
        ordered-containers     >= 0.2.4,
        mtl                    >= 2.3.1

library
    import:             common
    build-tool-depends: happy:happy, alex:alex
    hs-source-dirs:     src
    exposed-modules:    
        MiniML
        MiniML.Lex
        MiniML.Syntax
        MiniML.Error
        MiniML.Parse
        MiniML.Print
        MiniML.Typecheck
        MiniML.Values
        MiniML.Eval

executable miniML
    import:           common
    hs-source-dirs:   CLI
    main-is:          Main.hs
    build-depends:    miniML
    
test-suite test
    import:           common
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:    Gen
    build-depends:
        miniML,
        tasty                  >= 1.2,
        tasty-quickcheck       >= 0.10,

