cabal-version:      3.0
name:               Haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             zoep
maintainer:         zoe.paraskevopoulou@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Main
        Intro
        Typeclasses
        QuickCheck
    -- other-modules:
    -- other-extensions:
    build-depends:
        base          >=4.19.0.0,
        containers    >= 0.4.0.0,
        QuickCheck    >= 2.14.3,
        mtl           >= 2.3.1,
        random        >= 1.2.1.2,
        transformers  >= 0.6.1.2
    hs-source-dirs:   src
    default-language: Haskell2010
